# fcom8

./: .gitignore  .gitmodules  README.md
hardware/: Aletheia.kicad_pcb  Aletheia.kicad_pro  Aletheia.kicad_sch  Badge.kicad_mod  Components.kicad_sym  FCom-8.kicad_pcb  FCom-8.kicad_pro  FCom-8.kicad_sch  KeyboardAndDisplay.kicad_sch  Power.kicad_sch  power.kicad_sch
hardware/Components.pretty/: Badge.kicad_mod  NHD-0420DZ-FL-YBW.kicad_mod
simulator/: CMakeLists.txt  index.html  main.cpp  script.js  style.css
